# mmig-esl-artifact

./: .gitignore  README.md
data/: results.json
scripts/: extract_results.py  gen_figure.py  reproduce.sh
src/: README.md
src/configs/flows/: baseline_mig.json  mmig_flow.json
src/examples/: CMakeLists.txt  blif2mig_2.cpp
src/include/mockturtle/algorithms/: mig_resub.hpp  mmig_algebraic_rewriting.hpp  mmig_balancing.hpp  mmig_cec_guard.hpp  mmig_cone_polarity_flip.hpp  mmig_cut_rewriting.hpp  mmig_exact_rewriting.hpp  mmig_inv_optimization.hpp  mmig_inv_propagation.hpp  mmig_minority_seeding.hpp  mmig_optimizer.hpp  mmig_refactoring.hpp  mmig_resubstitution.hpp  resubstitution.hpp
src/test/: mmig_algebraic_rewriting.cpp  mmig_balancing.cpp  mmig_cut_rewriting.cpp  mmig_exact_rewriting.cpp  mmig_inv_optimization.cpp  mmig_inv_propagation.cpp  mmig_minority_seeding.cpp  mmig_optimizer_advanced.cpp  mmig_refactoring.cpp  mmig_resubstitution.cpp
src/tools/: mmig_ablation_report.py  mmig_dse_explore.py
