cmake_minimum_required(VERSION 3.10)

# Set the project name
project(mMIGExamples)

# Set the C++ standard
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

function(mockturtle_example target)
  cmake_parse_arguments(ARG "" "" "SOURCES" ${ARGN})
  if(NOT ARG_SOURCES)
    message(FATAL_ERROR "mockturtle_example(${target}) needs SOURCES")
  endif()
  add_executable(${target} ${ARG_SOURCES})
  target_include_directories(${target} PRIVATE ${CMAKE_SOURCE_DIR}/include)
  target_link_libraries(${target} PRIVATE mockturtle lorina)
endfunction()

# Optional OR-Tools (C++ CP-SAT) support. Set ORTOOLS_ROOT to your install prefix.
if (DEFINED ENV{ORTOOLS_ROOT})
  set(ORTOOLS_ROOT $ENV{ORTOOLS_ROOT})
endif()
if (DEFINED ORTOOLS_ROOT)
  list(APPEND CMAKE_PREFIX_PATH "${ORTOOLS_ROOT}")
endif()
find_package(ortools QUIET)

# Standalone utilities
mockturtle_example(blif2mig             SOURCES blif2mig.cpp)
mockturtle_example(blif2mig_2           SOURCES blif2mig_2.cpp)
mockturtle_example(blif2mig_test        SOURCES blif2mig_test.cpp)
mockturtle_example(blif2mig_3           SOURCES blif2mig_3.cpp)
mockturtle_example(blif2mig_3_simple    SOURCES blif2mig_3_simple.cpp)
mockturtle_example(batch_blif2mig       SOURCES batch_blif2mig.cpp)
mockturtle_example(industrial_batch_report SOURCES industrial_batch_report.cpp)
mockturtle_example(cut_enumeration      SOURCES cut_enumeration.cpp)
mockturtle_example(draw                 SOURCES draw.cpp)
mockturtle_example(draw_blif            SOURCES draw_blif.cpp)
mockturtle_example(draw_png             SOURCES draw_png.cpp)
mockturtle_example(equ                  SOURCES equ.cpp)
mockturtle_example(fuzz                 SOURCES fuzz.cpp)
mockturtle_example(fuzz_abc             SOURCES fuzz_abc.cpp)
mockturtle_example(minimize             SOURCES minimize.cpp)
mockturtle_example(print_stats          SOURCES print_stats.cpp)
mockturtle_example(stats                SOURCES stats.cpp)
mockturtle_example(stats_aig            SOURCES stats_aig.cpp)
mockturtle_example(mock2abc             SOURCES mock2abc.cpp)
mockturtle_example(mock2abc_batch       SOURCES mock2abc_batch.cpp)
mockturtle_example(rebuild_from_cpsat   SOURCES rebuild_from_cpsat.cpp)
mockturtle_example(dac19_flow_opt       SOURCES dac19_flow_opt.cpp)

if (ortools_FOUND)
  add_executable(cp_sat_demo cp_sat_demo.cpp)
  target_link_libraries(cp_sat_demo PRIVATE mockturtle lorina ortools::ortools)
  target_include_directories(cp_sat_demo PRIVATE ${CMAKE_SOURCE_DIR}/include)
  add_executable(cp_sat_window_mapper cp_sat_window_mapper.cpp)
  target_link_libraries(cp_sat_window_mapper PRIVATE mockturtle lorina ortools::ortools)
  target_include_directories(cp_sat_window_mapper PRIVATE ${CMAKE_SOURCE_DIR}/include)
else()
  message(STATUS "OR-Tools not found; cp_sat_demo will not be built. Set ORTOOLS_ROOT to your install prefix.")
endif()
